--- a/ios/FlaiVendor.xcodeproj/xcshareddata/xcschemes/FlaiRetail.xcscheme
+++ b/ios/FlaiVendor.xcodeproj/xcshareddata/xcschemes/FlaiRetail.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "FlaiRetail.app"
-               BlueprintName = "FlaiRetail"
-               ReferencedContainer = "container:FlaiRetail.xcodeproj">
+               BuildableName = "FlaiVendor.app"
+               BlueprintName = "FlaiVendor"
+               ReferencedContainer = "container:FlaiVendor.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "FlaiRetailTests.xctest"
-               BlueprintName = "FlaiRetailTests"
-               ReferencedContainer = "container:FlaiRetail.xcodeproj">
+               BuildableName = "FlaiVendorTests.xctest"
+               BlueprintName = "FlaiVendorTests"
+               ReferencedContainer = "container:FlaiVendor.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FlaiRetail.app"
-            BlueprintName = "FlaiRetail"
-            ReferencedContainer = "container:FlaiRetail.xcodeproj">
+            BuildableName = "FlaiVendor.app"
+            BlueprintName = "FlaiVendor"
+            ReferencedContainer = "container:FlaiVendor.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FlaiRetail.app"
-            BlueprintName = "FlaiRetail"
-            ReferencedContainer = "container:FlaiRetail.xcodeproj">
+            BuildableName = "FlaiVendor.app"
+            BlueprintName = "FlaiVendor"
+            ReferencedContainer = "container:FlaiVendor.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
