--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@tanstack/react-query": "^5.59.15",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.8.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
@@ -34,6 +42,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
